# lightning-talk-slide-analysis

./: .gitignore  CLAUDE.md  README.md  lightning_talks_analysis.ipynb  main.py  pyproject.toml
docs/: index.html  talk_space_data.js
